[package]
name = "rust_ethers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ethers = { version = "2.0", features = ["legacy"] }
ethers-solc = { version = "2.0", features = ["full"] }
ethers-providers = { version = "2.0" }
eyre = "0.6"
hex = "0.4"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "transact_anvil"
path = "src/bin/transact_anvil.rs"

[[bin]]
name = "deploy_counter"
path = "src/bin/deploy_counter.rs"
